--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
 Django==2.2
+django-crispy-forms==1.9.0
 django-rest-framework==0.1.0
 django-simple-history==2.10.0
 djangorestframework==3.11.0
